# slmfs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  install.sh
.github/workflows/: ci.yml
config/: com.eccyan.slmfs-fuse.plist  com.eccyan.slmfs.plist  slmfs-engine.service  superlocal-engine.service
docs/superpowers/plans/: 2026-04-20-liblangevin.md  2026-04-20-libpersist-memorygraph.md  2026-04-20-libslab.md
docs/superpowers/specs/: 2026-04-20-superlocal-memoryfs-design.md  2026-04-27-cognitive-ticks-design.md
python/: pyproject.toml
python/slmfs/: __main__.py  add.py  analyze.py  config.py  cooker.py  fuse_layer.py  init.py  mcp_server.py  shm_client.py
src/engine/: CMakeLists.txt
src/engine/include/engine/: memory_graph.hpp  scheduler.hpp
src/engine/src/: main.cpp  memory_graph.cpp  scheduler.cpp
src/langevin/: CMakeLists.txt
src/langevin/include/langevin/: poincare_disk.hpp  sde_stepper.hpp
src/langevin/src/: sde_stepper.cpp
src/metric/include/metric/: fisher_rao.hpp  simd_ops.hpp
src/metric/src/: fisher_rao.cpp  simd_ops.cpp
src/persist/include/persist/: sqlite_store.hpp  store.hpp
src/persist/src/: sqlite_store.cpp
src/sheaf/: CMakeLists.txt
src/sheaf/include/sheaf/: annotation.hpp  coboundary.hpp  neighborhood.hpp
src/sheaf/src/: annotation.cpp  coboundary.cpp
src/slab/: CMakeLists.txt
src/slab/include/slab/: control_block.hpp  header.hpp  slab_allocator.hpp
src/slab/src/: slab_allocator.cpp
tests/: CMakeLists.txt  test_header.cpp  test_langevin.cpp  test_memory_graph.cpp  test_metric.cpp  test_persist.cpp  test_scheduler.cpp  test_sheaf.cpp  test_slab_allocator.cpp
tests/python/: test_config.py  test_cooker.py  test_init.py  test_mcp_server.py
